gitops/components/instrumented-app/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: instrumented-app
  labels:
    app: instrumented-app
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: instrumented-app
---
apiVersion: v1
kind: Service
metadata:
  name: instrumented-app-nodeport
  labels:
    app: instrumented-app
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30800
      protocol: TCP
  selector:
    app: instrumented-app
